--- a/Business.html
+++ b/Business.html
@@ -13,6 +13,7 @@
 </div>
 <div class="topnav">
     <a class="#Homepage" href="Home.html">Home</a>
+    <a href="Business1.html">Businesscase</a>
     <a href="Business.html">Businesscase</a>
     <a href="FunctionalRequirements.html">Functional Requirments</a>
     <a href="Nonfunctional.html">Non Functional Requirments</a>
@@ -20,32 +21,32 @@
 </div>
 
 <article class="article1">
-<div >
+    <div >
 
-    <div>
-        <h1>Risco's</h1>
-        <p>De belangrijkste risico’s voor het succes van dit project zijn:</p>
-        <ol>
-            <li> De kwaliteit van een zelf ontwikkelde applicatie: Bij distributie van instabiele software naar Corendon zal de negatieve impact op onze fys groep(hele hva) Dit risico zullen we afdekken door goed te testen</li>
-            <li> De stabiliteit en volwassenheid van de Open Mobility Interface in SIS: Omdat Oracle dezelfde interface gebruikt voor hun eigen applicatie mogen we vertrouwen op de stabiliteit hiervan.</li>
+        <div>
+            <h1>Risco's</h1>
+            <p>De belangrijkste risico’s voor het succes van dit project zijn:</p>
+            <ol>
+                <li> De kwaliteit van een zelf ontwikkelde applicatie: Bij distributie van instabiele software naar Corendon zal de negatieve impact op onze fys groep(hele hva) Dit risico zullen we afdekken door goed te testen</li>
+                <li> De stabiliteit en volwassenheid van de Open Mobility Interface in SIS: Omdat Oracle dezelfde interface gebruikt voor hun eigen applicatie mogen we vertrouwen op de stabiliteit hiervan.</li>
                 <li> Privacie van de reizigers data: De applicatie zal gebruik maken van een beveiligde database</li>
             </ol>
-    </div>
+        </div>
 
-    <div>
-        <h1>Alternatieven</h1>
-        <p>Wat zijn de alternatieve opties die wij kunnen gebruiken als wij dit project niet maken</p>
-        <ol>
-            <li>We nemen geen actie. De nadelen hiervan zijn:<br> Dat reiziger die alleen reizen alleen blijven.
-        </ol>
-    </div>
-    <div >
-        <h1>Planning</h1>
-        <p>Dit is de planning met de datas van wat er moet worden ingeleverd</p>
-        <img src="images/planning.png" width="100%" class="zoom">
+        <div>
+            <h1>Alternatieven</h1>
+            <p>Wat zijn de alternatieve opties die wij kunnen gebruiken als wij dit project niet maken</p>
+            <ol>
+                <li>We nemen geen actie. De nadelen hiervan zijn:<br> Dat reiziger die alleen reizen alleen blijven.
+            </ol>
+        </div>
+        <div >
+            <h1>Planning</h1>
+            <p>Dit is de planning met de datas van wat er moet worden ingeleverd</p>
+            <img src="images/planning.png" width="100%" class="zoom">
 
+        </div>
     </div>
-</div>
 </article>
 </body>
 </html>
