--- a/Business1.html
+++ b/Business1.html
@@ -15,6 +15,7 @@
     <!-- Navigation bar -->
     <div class="topnav">
         <a class="#Homepage" href="Home.html">Home</a>
+        <<a href="Business1.html">Businesscase</a>
         <a href="Business.html">Businesscase</a>
         <a href="FunctionalRequirements.html">Functional Requirments</a>
         <a href="Nonfunctional.html">Non Functional Requirments</a>
