--- a/Home.html
+++ b/Home.html
@@ -14,49 +14,50 @@
 
 <div class="topnav">
     <a class="#Homepage" href="Home.html">Home</a>
+    <a href="Business1.html">Businesscase</a>
     <a href="Business.html">Businesscase</a>
     <a href="FunctionalRequirements.html">Functional Requirments</a>
     <a href="Nonfunctional.html">Non Functional Requirments</a>
     <a href="OnsTeam.html">Ons Team</a>
 </div>
 <article class="article1">
-<div class="row">
-    <div class="column">
-        <h2>Het Concept</h2>
-        <p>Wij presenteren: Corendon – Connect & Go. Een gloednieuw platform ontworpen door Software Engineering studenten van de Hogeschool van Amsterdam.  Het doel van dit platform is om alleenstaande reizigers te verbinden met elkaar. Ons team is momenteel druk bezig met het ontwikkelen van deze website. Je kunt momenteel wel al een paar pagina’s vinden zoals: de homepage, de businesscase, de functional requirments, de non functional requirments en informatie over ons team. Op onze homepage kun je een introductie vinden over het project. In onze businesscase kun je ons plan van aanpak vinden. Bij de functional requirments kun je de functionele eisen van onze website vinden. Bij de non functional requirments kun je de niet functionele eisen van onze website vinden. Op onze teampagina kun je meer informatie over ons team vinden.</p>
-    </div>
-    <div class="column">
-        <h2>Opdrachtomschrijving</h2>
-        <p> Het aantal alleenstaanden in Nederland groeit hard. Zeventig jaar geleden telde Nederland
-            285.000 alleenstaanden, inmiddels zijn dat er meer dan drie miljoen. Dat blijkt uit cijfers van
-            het Centraal Bureau voor de Statistiek. De verwachting is dat in 2030 3,6 miljoen mensen
-            alleen door het leven gaan. Een alleenstaande kan iemand zijn die vrijgezel is maar ook
-            iemand die gescheiden is (met of zonder kinderen) of weduwe/ weduwnaar is.
-            In de vakantiewereld is ook een groeiende vraag naar reizen speciaal voor alleenstaanden.
-            Voor sommige reizigers is 's avonds alleen een glas wijn drinken heerlijk, anderen reizen
-            liever samen met familie of vrienden, of juist met een heel nieuw gezelschap.
-            Het kan leuk zijn (een deel) van de reis op te trekken met iemand die dezelfde interesses
-            heeft. Bijvoorbeeld om samen naar een favoriet museum of festival te gaan of om samen
-            lekker vis te eten bij dat leuke strandtentje.
-            Corendon wil inspelen op deze ontwikkeling en wil de alleenstaande reizigers met elkaar in
-            contact brengen op basis van gezamenlijke interesses. Dit contact kan ontstaan voordat een
-            reis geboekt wordt, bijvoorbeeld om een andere alleenstaande reiziger te zoeken om samen
-            (een deel) van de reis mee op te trekken. Maar het kan ook tijdens de reis om iemand te
-            zoeken voor een leuke activiteit. Corendon wil hiervoor een website ontwikkelen om dit
-            allemaal mogelijk te maken. Deze website staat los van de bestaande Corendon website.
-            Via links in de reisteksten en in de reisdocumenten wordt verwezen naar het bestaan van de
-            site.
-         </p>
-    </div>
-    <div class="column">
-        <h2>De Taakverdeling</h2>
-        <p> Danial Iqbal – Homepage </p>
-        <p> Abbas Sardar & Martin Antonov – Businesscase </p>
-        <p> Jason Schermer – Functional Requirments </p>
-        <p> Martin Antonov – Businesscase </p>
-        <p> Onur Ortaakarsuci – Non Functional Requirments </p>
+    <div class="row">
+        <div class="column">
+            <h2>Het Concept</h2>
+            <p>Wij presenteren: Corendon – Connect & Go. Een gloednieuw platform ontworpen door Software Engineering studenten van de Hogeschool van Amsterdam.  Het doel van dit platform is om alleenstaande reizigers te verbinden met elkaar. Ons team is momenteel druk bezig met het ontwikkelen van deze website. Je kunt momenteel wel al een paar pagina’s vinden zoals: de homepage, de businesscase, de functional requirments, de non functional requirments en informatie over ons team. Op onze homepage kun je een introductie vinden over het project. In onze businesscase kun je ons plan van aanpak vinden. Bij de functional requirments kun je de functionele eisen van onze website vinden. Bij de non functional requirments kun je de niet functionele eisen van onze website vinden. Op onze teampagina kun je meer informatie over ons team vinden.</p>
+        </div>
+        <div class="column">
+            <h2>Opdrachtomschrijving</h2>
+            <p> Het aantal alleenstaanden in Nederland groeit hard. Zeventig jaar geleden telde Nederland
+                285.000 alleenstaanden, inmiddels zijn dat er meer dan drie miljoen. Dat blijkt uit cijfers van
+                het Centraal Bureau voor de Statistiek. De verwachting is dat in 2030 3,6 miljoen mensen
+                alleen door het leven gaan. Een alleenstaande kan iemand zijn die vrijgezel is maar ook
+                iemand die gescheiden is (met of zonder kinderen) of weduwe/ weduwnaar is.
+                In de vakantiewereld is ook een groeiende vraag naar reizen speciaal voor alleenstaanden.
+                Voor sommige reizigers is 's avonds alleen een glas wijn drinken heerlijk, anderen reizen
+                liever samen met familie of vrienden, of juist met een heel nieuw gezelschap.
+                Het kan leuk zijn (een deel) van de reis op te trekken met iemand die dezelfde interesses
+                heeft. Bijvoorbeeld om samen naar een favoriet museum of festival te gaan of om samen
+                lekker vis te eten bij dat leuke strandtentje.
+                Corendon wil inspelen op deze ontwikkeling en wil de alleenstaande reizigers met elkaar in
+                contact brengen op basis van gezamenlijke interesses. Dit contact kan ontstaan voordat een
+                reis geboekt wordt, bijvoorbeeld om een andere alleenstaande reiziger te zoeken om samen
+                (een deel) van de reis mee op te trekken. Maar het kan ook tijdens de reis om iemand te
+                zoeken voor een leuke activiteit. Corendon wil hiervoor een website ontwikkelen om dit
+                allemaal mogelijk te maken. Deze website staat los van de bestaande Corendon website.
+                Via links in de reisteksten en in de reisdocumenten wordt verwezen naar het bestaan van de
+                site.
+            </p>
+        </div>
+        <div class="column">
+            <h2>De Taakverdeling</h2>
+            <p> Danial Iqbal – Homepage </p>
+            <p> Abbas Sardar & Martin Antonov – Businesscase </p>
+            <p> Jason Schermer – Functional Requirments </p>
+            <p> Martin Antonov – Businesscase </p>
+            <p> Onur Ortaakarsuci – Non Functional Requirments </p>
 
-    </div>
+        </div>
 
 </article>
 </body>
