--- a/Nonfunctional.html
+++ b/Nonfunctional.html
@@ -8,45 +8,46 @@
 </head>
 <body>
 
-  <div class="topnav">
-      <a class="#Homepage" href="Home.html">Home</a>
-      <a href="Business.html">Businesscase</a>
-      <a href="FunctionalRequirements.html">Functional Requirments</a>
-      <a href="Nonfunctional.html">Non Functional Requirments</a>
-      <a href="OnsTeam.html">Ons Team</a>
-  </div>
+<div class="topnav">
+  <a class="#Homepage" href="Home.html">Home</a>
+  <a href="Business1.html">Businesscase</a>
+  <a href="Business.html">Businesscase</a>
+  <a href="FunctionalRequirements.html">Functional Requirments</a>
+  <a href="Nonfunctional.html">Non Functional Requirments</a>
+  <a href="OnsTeam.html">Ons Team</a>
+</div>
 
 <h1 class="center"> MoSCoW non functional requirements </h1>
 <div>
-<div>
-  <h2 class="center">Must have</h2>
+  <div>
+    <h2 class="center">Must have</h2>
 
-  <p class="center">De pagina moet binnen paar seconden reageren</p>
-  <p class="center">Je moet kunnen inloggen</p>
-  <p class="center">Voor volledig overzicht moet je ingelogd zijn</p>
-  <p class="center">Je moet een account hebben om anderen te zoeken</p>
-  <p class="center">Gegevens van gebruikers moeten veilig zijn</p>
-  <p class="center">Alle gebruikers krijgen een eigen profiel</p>
-  <p class="center">In de voorpagina staat alleen informatie over de site</p>
+    <p class="center">De pagina moet binnen paar seconden reageren</p>
+    <p class="center">Je moet kunnen inloggen</p>
+    <p class="center">Voor volledig overzicht moet je ingelogd zijn</p>
+    <p class="center">Je moet een account hebben om anderen te zoeken</p>
+    <p class="center">Gegevens van gebruikers moeten veilig zijn</p>
+    <p class="center">Alle gebruikers krijgen een eigen profiel</p>
+    <p class="center">In de voorpagina staat alleen informatie over de site</p>
 
-</div>
-<div>
-  <h2 class="center">Should have</h2>
-  <p class="center">De site moet de look en feel van de Corendon site hebben</p>
-  <p class="center">Een pagina met favorieten</p>
-  <p class="center">De website moet werken op andere apparatuur</p>
-  <p class="center"></p>
-</div>
-<div>
-  <h2 class="center">Could have</h2>
-  <p class="center">De layout mag er leuk uitzien</p>
-  <p class="center">In de voorpagina komen reviews</p>
-</div>
-<div>
-  <h2 class="center">Wont have</h2>
-  <p class="center">De layout moet niet corporate zijn</p>
-  <p></p>
-</div>
+  </div>
+  <div>
+    <h2 class="center">Should have</h2>
+    <p class="center">De site moet de look en feel van de Corendon site hebben</p>
+    <p class="center">Een pagina met favorieten</p>
+    <p class="center">De website moet werken op andere apparatuur</p>
+    <p class="center"></p>
+  </div>
+  <div>
+    <h2 class="center">Could have</h2>
+    <p class="center">De layout mag er leuk uitzien</p>
+    <p class="center">In de voorpagina komen reviews</p>
+  </div>
+  <div>
+    <h2 class="center">Wont have</h2>
+    <p class="center">De layout moet niet corporate zijn</p>
+    <p></p>
+  </div>
 </div>
 </body>
 </html>
