--- a/Business1.html
+++ b/Business1.html
@@ -11,11 +11,11 @@
     <div class="header">
         <img src="images/Cor1.jpg" alt="Het logo van het bedrijf" height="125" width="400">
     </div>
-    
+
     <!-- Navigation bar -->
     <div class="topnav">
         <a class="#Homepage" href="Home.html">Home</a>
-        <<a href="Business1.html">Businesscase</a>
+        <a href="Business1.html">Businesscase</a>
         <a href="Business.html">Businesscase</a>
         <a href="FunctionalRequirements.html">Functional Requirments</a>
         <a href="Nonfunctional.html">Non Functional Requirments</a>
