--- a/Nonfunctional.html
+++ b/Nonfunctional.html
@@ -9,7 +9,6 @@
 
 <body>
 
-<<<<<<< HEAD
 <title>Corendon - Connect & Go</title>
 <link href="Css/Home.css" rel="stylesheet" type="text/css">
 <meta charset="utf-8">
@@ -32,84 +31,45 @@
 
 <div class="center">
 
-  <table style="width: 100%">
+  <article class="article1">
 
-    <thead>
-    <tr>
-      <th>ReqNumber</th>
-      <th>Requirement</th>
-      <th>Prioriteit</th>
-    </tr>
-    </thead>
+    <table style="width: 100%">
 
-    <tbody>
-    <tr>
-      <td>#001</td>
-      <td>De pagina moet binnen paar seconden reageren</td>
-      <td>Must have</td>
-    </tr>
+      <thead>
+      <tr>
+        <th>ReqNumber</th>
+        <th>Requirement</th>
+        <th>Prioriteit</th>
+      </tr>
+      </thead>
 
-    <tr>
-      <td>#002</td>
-      <td>De pagina moet met https beveiligd zijn</td>
-      <td>Must have</td>
-    </tr>
+      <tbody>
+      <tr>
+        <td>#001</td>
+        <td>De pagina moet binnen paar seconden reageren</td>
+        <td>Must have</td>
+      </tr>
 
-    <tr>
-      <td>#003</td>
-      <td>De site moet de look en feel van de Corendon site hebben</td>
-      <td>Should have</td>
-    </tr>
+      <tr>
+        <td>#002</td>
+        <td>De pagina moet met https beveiligd zijn</td>
+        <td>Must have</td>
+      </tr>
 
-    <tr>
-      <td>#004</td>
-      <td>De layout mag niet corporate zijn</td>
-      <td>Wont have</td>
-    </tr>
-    </tbody>
-  </table>
-=======
-<div class="topnav">
-  <a class="#Homepage" href="Home.html">Home</a>
-  <a href="Business1.html">Businesscase</a>
-  <a href="Business.html">Businesscase</a>
-  <a href="FunctionalRequirements.html">Functional Requirments</a>
-  <a href="Nonfunctional.html">Non Functional Requirments</a>
-  <a href="OnsTeam.html">Ons Team</a>
-</div>
+      <tr>
+        <td>#003</td>
+        <td>De site moet de look en feel van de Corendon site hebben</td>
+        <td>Should have</td>
+      </tr>
 
-<h1 class="center"> MoSCoW non functional requirements </h1>
-<div>
-  <div>
-    <h2 class="center">Must have</h2>
-
-    <p class="center">De pagina moet binnen paar seconden reageren</p>
-    <p class="center">Je moet kunnen inloggen</p>
-    <p class="center">Voor volledig overzicht moet je ingelogd zijn</p>
-    <p class="center">Je moet een account hebben om anderen te zoeken</p>
-    <p class="center">Gegevens van gebruikers moeten veilig zijn</p>
-    <p class="center">Alle gebruikers krijgen een eigen profiel</p>
-    <p class="center">In de voorpagina staat alleen informatie over de site</p>
-
-  </div>
-  <div>
-    <h2 class="center">Should have</h2>
-    <p class="center">De site moet de look en feel van de Corendon site hebben</p>
-    <p class="center">Een pagina met favorieten</p>
-    <p class="center">De website moet werken op andere apparatuur</p>
-    <p class="center"></p>
-  </div>
-  <div>
-    <h2 class="center">Could have</h2>
-    <p class="center">De layout mag er leuk uitzien</p>
-    <p class="center">In de voorpagina komen reviews</p>
-  </div>
-  <div>
-    <h2 class="center">Wont have</h2>
-    <p class="center">De layout moet niet corporate zijn</p>
-    <p></p>
-  </div>
->>>>>>> Abbas
+      <tr>
+        <td>#004</td>
+        <td>De layout mag niet corporate zijn</td>
+        <td>Wont have</td>
+      </tr>
+      </tbody>
+    </table>
+  </article>
 </div>
 </body>
 </html>
