--- a/FunctionalRequirements.html
+++ b/FunctionalRequirements.html
@@ -44,6 +44,7 @@ th, td {
 </div>
 <div class="topnav">
     <a class="#Homepage" href="Home.html">Home</a>
+    <a href="Business1.html">Businesscase</a>
     <a href="Business.html">Businesscase</a>
     <a href="FunctionalRequirements.html">Functional Requirments</a>
     <a href="Nonfunctional.html">Non Functional Requirments</a>
