--- a/FunctionalRequirements.html
+++ b/FunctionalRequirements.html
@@ -45,7 +45,7 @@ th, td {
 <div class="topnav">
     <a class="#Homepage" href="Home.html">Home</a>
     <a href="Business1.html">Businesscase</a>
-    <a href="Business.html">Businesscase</a>
+    <a href="Business.html">Businesscase 2</a>
     <a href="FunctionalRequirements.html">Functional Requirments</a>
     <a href="Nonfunctional.html">Non Functional Requirments</a>
     <a href="OnsTeam.html">Ons Team</a>
@@ -241,5 +241,7 @@ th, td {
     </tbody>
 </table>
 </article>
-
+<footer>
+    <p>Created by: IS110 Group 4</p>
+</footer>
 </body></html>
