--- a/Home.html
+++ b/Home.html
@@ -16,7 +16,7 @@
 <div class="topnav">
     <a class="#Homepage" href="Home.html">Home</a>
     <a href="Business1.html">Businesscase</a>
-    <a href="Business.html">Businesscase</a>
+    <a href="Business.html">Businesscase 2</a>
     <a href="FunctionalRequirements.html">Functional Requirments</a>
     <a href="Nonfunctional.html">Non Functional Requirments</a>
     <a href="OnsTeam.html">Ons Team</a>
@@ -61,5 +61,9 @@
         </div>
 
 </article>
+<footer>
+    <p>Created by: IS110 Group 4</p>
+</footer>
 </body>
+
 </html>
