--- a/FunctionalRequirements.html
+++ b/FunctionalRequirements.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" class="gr__localhost"><head>
+<html lang="en" class="gr__localhost">
+<head>
+    <meta name="author" content="Jason">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Corendon - Connect &amp; Go</title>
-    <title>Functional Requirements</title>
+    <title>Corendon - Connect & Go</title>
 
     <link href="Css/Home.css" rel="stylesheet" type="text/css">
 
