--- a/OnsTeam.html
+++ b/OnsTeam.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="author" content="Anass">
+
     <meta charset="UTF-8">
-    <title> Cor en Don / Connect & Go</title>
-    <link rel="stylesheet" type="text/css" href="Css/Home.css"
+    <title>Corendon - Connect & Go</title>
+    <link rel="stylesheet" type="text/css" href="Css/Home.css">
+    <
 </head>
 <body id="myPage">
 <article>
