--- a/Business.html
+++ b/Business.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Business Cases</title>
+    <meta name="author" content="Abbas">
+
+    <title>Corendon - Connect & Go</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="Css/Home.css">
     <link rel="stylesheet" type="text/css" href="Business1.css">
