--- a/Home.html
+++ b/Home.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="author" content="Danial">
+
     <title>Corendon - Connect & Go</title>
     <link href="Css/Home.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
