--- a/Nonfunctional.html
+++ b/Nonfunctional.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <meta name="author" content="Onur">
+
   <meta charset="UTF-8">
   <title>Corendon - Connect & Go</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">  <link href="Css/Home.css" type="text/css" rel="stylesheet">
