--- a/OnsTeam.html
+++ b/OnsTeam.html
@@ -24,40 +24,45 @@
     <!-- Team Container -->
     <article class="article1">
         <div class="teamContainer teamPadding teamCenter" id="team">
-            <h2>Ons Team</h2>
-            <p>Ontmoet ons team:</p>
+            <h2>Ontmoet ons team:</h2>
 
             <div class="namenBalk">
 
                 <div class="Naam">
-                    <h3>Martin Antonov</h3>
-                    <img class="imgMartin" src="images/Martin.jpeg" alt="Avatar">
+                    <h3>Martin<br>Antonov</h3>
+                    <img class="img" src="images/MartinV2.jpeg" alt="Avatar">
                     <p>Voorzitter</p>
                 </div>
 
                 <div class="Naam">
                     <h3>Danial<br>Iqbal</h3>
-                    <img class="imgDanial" src="images/Danial.jpeg" alt="Avatar">
+                    <img class="img" src="images/Danial.jpeg" alt="Avatar">
+                    <p>Notulist & Designer</p>
                 </div>
 
                 <div class="Naam">
-                    <h3>Anass Mortaki</h3>
+                    <h3>Anass<br>Mortaki</h3>
                     <img class="img" src="images/Anass.jpg" alt="Avatar">
+                    <p>Researcher</p>
+                    <p>
                 </div>
 
                 <div class="Naam">
                     <h3>Abbas<br>Sardar</h3>
                     <img class="imgAbbas" src="images/Abbas.jpg" alt="Avatar">
+                    <p>Head developer</p>
                 </div>
 
                 <div class="Naam">
-                    <h3>Jason Schermer</h3>
+                    <h3>Jason<br>Schermer</h3>
                     <img class="img" src="images/Jason.jpg" alt="Avatar">
+                    <p>Planner</p>
                 </div>
 
                 <div class="Naam">
                     <h3>Onur Ortaakarsuci</h3>
                     <img class="img" src="images/Onur.jpg" alt="Avatar">
+                    <p>Tester</p>
                 </div>
 
             </div>
